--- a/client/othello-app/src/pages/login.css
+++ b/client/othello-app/src/pages/login.css
@@ -401,7 +401,7 @@
 }
 
 
-..login-box .keep-signed-in-box input {
+.login-box .keep-signed-in-box input {
   opacity: 0;
   cursor: pointer;
   width: 20px; /* Set a width for the checkbox */
