--- a/client/othello-app/src/pages/login.css
+++ b/client/othello-app/src/pages/login.css
@@ -14,6 +14,9 @@
   font-family: sans-serif;
   background:rgb(112, 109, 109);
   overflow: hidden;
+  background-image: url(https://i.pinimg.com/564x/ec/2f/98/ec2f98e7b7d4d4bca4b2126a0a80bf46.jpg); 
+  color: white;
+  background-size: cover;
 }
 
 .login-box {
