--- a/client/othello-app/src/pages/login.css
+++ b/client/othello-app/src/pages/login.css
@@ -14,7 +14,7 @@
   font-family: sans-serif;
   background:rgb(112, 109, 109);
   overflow: hidden;
-  background-image: url(https://i.pinimg.com/564x/ec/2f/98/ec2f98e7b7d4d4bca4b2126a0a80bf46.jpg); 
+  background-image: url(https://i.pinimg.com/originals/d7/6c/b0/d76cb0858553975e0e21e27803908af6.gif); 
   color: white;
   background-size: cover;
 }
@@ -447,4 +447,98 @@
 .login-box .keep-signed-in-box label {
   color: #fff;
   font-size: 16px;
+}
+.submit-btn {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px; /* Adjust padding for size */
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 20px; /* Adjust margin */
+  letter-spacing: 4px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.submit-btn:hover span {
+  background: #03e9f4;
+  color: #fff;
+}
+
+.submit-btn span {
+  position: relative;
+  display: block;
+}
+
+.submit-btn .btn-line {
+  position: absolute;
+  display: block;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  width: 100%;
+  height: 2px;
+}
+
+.submit-btn .btn-line:nth-child(1) {
+  top: 0;
+  left: 0;
+  animation: btn-anim1 1s linear infinite;
+}
+
+.submit-btn .btn-line:nth-child(2) {
+  top: 0;
+  right: 0;
+  animation: btn-anim2 1s linear infinite;
+}
+
+.submit-btn .btn-line:nth-child(3) {
+  bottom: 0;
+  right: 0;
+  animation: btn-anim3 1s linear infinite;
+}
+
+.submit-btn .btn-line:nth-child(4) {
+  bottom: 0;
+  left: 0;
+  animation: btn-anim4 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+  50%, 100% {
+    left: 100%;
+  }
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%, 100% {
+    top: 100%;
+  }
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%, 100% {
+    right: 100%;
+  }
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%, 100% {
+    bottom: 100%;
+  }
 }
